Version ClaSS-0.9.1 release (2009/06/01)
-----------------------------------------

Fixed generate_report_columns to use compstatus correctly.

Moved the statementbank library out of lib/include.


Version ClaSS-0.9.0 release (2009/05/06)
-----------------------------------------

Migrated from subversion to git.

Expanded the classification of compnents/strands to have an 'Other
Validating' category. Assessments can now be applied to one of O or V,
they can also use AV (all validating) for both.

The onereport page will now check for an earlier comment completed by
that teacher and not allow additional entries.

Implement the config option enrol_assess_sen to automatically flag new
enrolments as SEN when they have a specific assessment value given.

Added empty ldap library.

Fix for using the budget_endmonth CFG value in get_budgetyear().



Version ClaSS-0.8.69 release (2009/04/22)
-----------------------------------------

A new clickthru from the MarkBook table to the Register for
attendance. The register amended so that it can take newcid as well as
newfid for listing students.

A listin_class function returns the students for a given cid, part of the
curriculum functions.

A small fix to the enrolment table which corrects the leavers total.

An upgrade of the Register to facilitate registration in teaching
groups. This adds a field to the event table for teaching period.

Added get_class_section to curiculum functions.

Trial version of class periods for registration outside of AM/PM
sessions. Uses $nodays variable to display periods when $nodays=1.
Still TODO is configure the periods per sessoin and be able to
autoselect based on time.

Added ratingname selection to new_report and fixed the
new_report_action so it generates ridcatid entries correctly under the
new scheme.


Version ClaSS-0.8.68 release (2009/04/08)
-----------------------------------------

Fix to a problem with the new register turnover time.
