@@ -13,7 +13,7 @@ print '<?xml version="1.0" encoding="utf-8"?'.'>';
 <link rel="icon" type="image/png" href="images/classicon.png" />
 <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
 <meta http-equiv="Content-Script-Type" content="text/JavaScript" />
-<meta name="copyright" content="Copyright 2002-2007 Stuart Thomas Johnson. All trademarks acknowledged. All rights reserved." />
+<meta name="copyright" content="Copyright 2002-2009 Stuart Thomas Johnson. All trademarks acknowledged. All rights reserved." />
 <meta name="version" content="<?php print $CFG->version; ?>" />
 <meta name="license" content="GNU General Public License version 2" />
 <link href="css/hoststyle.css" rel="stylesheet" type="text/css" />
